--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -1055,7 +1055,7 @@ width: 16px;
 height: 16px;
 border-radius: 50%;
 display: inline-block;
-margin-right: 8px;
+flex-shrink: 0;
 }
 
 .payment-method-name {
